# stellar-cctp

./: .gitignore  .gitmodules  .licenseignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.githooks/: README.md  pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml
contracts/cctp-forwarder/: Cargo.toml
contracts/cctp-forwarder/src/: contract.rs  lib.rs  message.rs  message_test.rs  storage.rs  test.rs
contracts/message-transmitter-v2/: Cargo.toml
contracts/message-transmitter-v2/src/: contract.rs  lib.rs  storage.rs  test.rs  test_utils.rs
contracts/token-messenger-minter-v2/: Cargo.toml
contracts/token-messenger-minter-v2/src/: contract.rs  deposit.rs  lib.rs  receive.rs  storage.rs  test.rs  test_utils.rs
examples/: .env.example  README.md  biome.json  config.ts  evm.ts  main.ts  package-lock.json  package.json  stellar-utils.ts  stellar.ts  tsconfig.json
scripts/: .env.example  .gitignore  README.md  biome.json  package.json  setup-rust.sh  tsconfig.json
scripts/cli/: utils.ts
scripts/cli/setup/: local-env.ts
scripts/clients/cctp-forwarder/: README.md  package.json
scripts/clients/cctp-forwarder/src/: index.ts
scripts/clients/message-transmitter-v2/: README.md  package.json
scripts/clients/message-transmitter-v2/src/: index.ts
scripts/clients/token-messenger-minter-v2/: README.md  package.json
scripts/clients/token-messenger-minter-v2/src/: index.ts
scripts/deploy/: deploy-cctp-forwarder.ts  deploy-message-transmitter-v2.ts  deploy-token-messenger-minter-v2.ts
scripts/sac/: contract.ts
scripts/setup/: link-remote-resources.ts
testdata/: upgrade_v2.wasm  upgrade_v2_migratable.wasm
