[package]
name = "cctp-forwarder"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
default = ["entry-points"]
entry-points = []

[dependencies]
cctp-interfaces = { workspace = true }
cctp-roles = { workspace = true }
cctp-utils = { workspace = true }
common-roles = { workspace = true }
soroban-sdk = { workspace = true }
stellar-access = "=0.5.0"
stellar-contract-utils = "=0.5.0"
stellar-macros = "=0.5.0"
stellar-tokens = "=0.5.0"
stellar-utils = { workspace = true, features = ["hazmat-address-utils"] }

[dev-dependencies]
cctp-roles = { workspace = true, features = ["testutils"] }
common-roles = { workspace = true, features = ["testutils"] }
event-assertion = { workspace = true }
rstest = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
